learing table_forms

--- a/03_table.html
+++ b/03_table.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><table></table></title>
-</head>
-<body>
+  </head>
+
+  <body>
     <table>
-        <th>name</th>     
-        
+      <tr>
+        <td>column1</td>
+        <td>column2</td>
+        <td>column3</td>
+      </tr>
+      <table>
+        <tr>
+          <th>name</th>
+          <th>age</th>
+          <th>DOB</th>
+        </tr>
+        <tr>
+          <td>abhi</td>
+          <td>26</td>
+          <td>02/05/19</td>
+        </tr>
+        <tr>
+          <td>aman</td>
+          <td>25</td>
+          <td>17/11/2011</td>
+        </tr>
+      </table>
     </table>
-</body>
+  </body>
 </html>
