--- a/media.html
+++ b/media.html
@@ -19,8 +19,8 @@
         </figcaption>
     </figure>
 
+<video src="./WIN_20251129_21_37_01_Pro.mp4" width="400px" controls controlslist="nofullscreen noremoteplayback noplaybackrate foobar">my video</video>
 
 
-    
 </body>
 </html>
