--- a/css/01_basics/html_css_class/website.html
+++ b/css/01_basics/html_css_class/website.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../website.css">
 </head>
 <body>
+    
     <button>click</button><br/>
     <button>abhishek</button>
     <button>cake</button>
@@ -25,7 +27,37 @@
         <p>$39-in stock</p>
         <p>free delivery tomorrow.</p>
         <button>Add to cart</button>
-        <button>Buy nooe</button>
+        <button>Buy nooe</button> <be/>
+
+        <p class="tahoma-font">This is Tahoma Font</p>
+        <p class="year-font">
+            Biggest Deals of the Year! <span class="sales-sales"> Sales end Thuesday</span> 
+        </p>
     
+<p class="title">
+    HTML CSS Course
+</p>
+<p class="pro-class">
+    Beginner to pro
+</p>
+<p class="content">
+    In this course, we'll learn the skills you need to become a developer.
+</p>
+<button class="button">Get Started</button>
+
+
+
+
+<p class="title">
+    Shopping for your business?
+</p>
+
+<p class="subtitle">Seee how Apple at Work can help.</p>
+
+<p>
+    Learn mor &#62;
+</p>
+
+
 </body>
 </html>
