--- a/css/01_basics/html_css_class/button.html
+++ b/css/01_basics/html_css_class/button.html
@@ -3,194 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>button</title>
+
+    <link rel="stylesheet" href="../button.css" />
   </head>
   <body>
-    <style>
-      .subscribe-button {
-        background-color: rgb(200, 0, 0);
-        color: white;
-        border: none;
-        height: 36px;
-        width: 105px;
-        border-radius: 2px;
-        cursor: pointer;
-        margin-right: 8px;
-        transition: opacity 0.15s;
-      }
-      .subscribe-button:hover {
-        opacity: 0.7;
-      }
-      .subscribe-button:active {
-        opacity: 0.8;
-      }
-
-      .join-button {
-        background-color: white;
-        color: blue;
-        border-color: rgb(7, 2, 143);
-        border-style: solid;
-        border-width: 1px;
-        height: 36px;
-        width: 62px;
-        border-radius: 9px;
-        cursor: pointer;
-        transition: background-color 0.35s, color 0.35s;
-      }
-      .join-button:hover {
-        background-color: blue;
-        color: white;
-      }
-      .tweet-button {
-        background-color: blue;
-        color: white;
-        border: none;
-        height: 36px;
-        width: 70px;
-        border-radius: 18px;
-        cursor: pointer;
-        margin-left: 8px;
-        transform: box-shadow0.15px;
-      }
-      .tweet-button:hover {
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-      }
-      .request-button {
-        background-color: rgb(0, 0, 0);
-        color: white;
-        border: none;
-        margin-top: 12px;
-        padding: 2px 4px;
-        cursor: pointer;
-      }
-      .request-button:hover {
-        opacity: 0.8;
-      }
-      .Cart-button {
-        background-color: rgb(255%, 216%, 20%);
-        color: black;
-        border: none;
-        border-radius: 12px;
-        padding: 5px 30px;
-        margin-left: 10px;
-        cursor: pointer;
-        transition: background-color 0.36s, color 0.36s;
-      }
-      .Cart-button:hover {
-        background-color: black;
-        color: rgb(255%, 216%, 20%);
-      }
-      .Singup-button {
-        background-color: rgb(46, 164, 79);
-        color: white;
-        border: none;
-        border-radius: 2px;
-        padding: 8px 28px;
-        cursor: pointer;
-      }
-      .Singup-button:hover {
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.36);
-      }
-      .start-button {
-        background-color: rgb(121, 82, 179);
-        color: white;
-        border-style: solid;
-        border-radius: 2px;
-        padding: 8px 16px;
-        height: 36px;
-        cursor: pointer;
-      }
-      .start-button:hover {
-        background-color: white;
-        color: rgb(121, 82, 179);
-      }
-      .Download-button {
-        background-color: white;
-        color: rgb(108, 117, 125);
-        border-width: 1px;
-        border-radius: 2px;
-        border-color: rgb(108, 117, 125);
-        border-style: solid;
-        padding: 4px 16px;
-        vertical-align: top;
-        width: 101.137px;
-        height: 36px;
-      }
-      .Download-button:hover {
-        background-color: rgb(108, 117, 125);
-        color: white;
-      }
-      .apply-button {
-        background-color: rgb(10, 102, 194);
-        color: white;
-        border: none;
-        border-radius: 16px;
-        margin-top: 4px;
-        padding: 8px 16px;
-        cursor: pointer;
-      }
-      .apply-button:hover {
-        background-color: rgba(10, 102, 194, 0.687);
-      }
-      .save-button {
-        background-color: white;
-        color: rgb(10, 102, 194);
-        border-color: rgb(10, 102, 194);
-        border-radius: 4px 16px;
-        border-style: solid;
-        border-width: 1px;
-        padding: 4px 16px;
-        cursor: pointer;
-      }
-
-      .save-button:hover {
-        border-width: 2px;
-      }
-      .add-button {
-        background-color: rgb(255, 216, 20);
-        border: none;
-        border-radius: 16px;
-        padding: 4px 16px;
-        cursor: pointer;
-        margin-bottom: 16px;
-      }
-      .buy-button {
-        background-color: rgb(255, 164, 28);
-        border: none;
-        border-radius: 16px;
-        margin: 4px;
-        padding: 4px 16px;
-        cursor: pointer;
-      }
-      .amazon:hover {
-        color: rgba(193, 25, 25, 0.758);
-      }
-      .number-a {
-        margin-left: 4px;
-        margin-right: 4px;
-        font-size: 18px;
-      }
-      .Stretch-button {
-        background-color: green;
-        color: white;
-        border: none;
-        font-size: 18px;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        padding-left: 15px;
-        padding-right: 15px;
-        cursor: pointer;
-        transition: padding-top 1s, padding-bottom 1s, padding-left 1s,
-          padding-right 1s;
-        margin-top: 4px;
-      }
-      .Stretch-button:hover {
-        padding-top: 15px;
-        padding-bottom: 15px;
-        padding-left: 26px;
-        padding-right: 26px;
-      }
-    </style>
     <button class="subscribe-button">SUBSCRIBE</button>
 
     <button class="join-button">JOIN</button>
